--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>NAVER VIBE</title>
     <link rel="stylesheet" href="css/commons/reset.css">
     <link rel="stylesheet" href="css/index/index.css">
+    <link rel="icon" href="img/favicon/favicon.png" type="image/png">
 </head>
 
 <body>
