--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <span class="close"></span>
                 </div> 
             </div>
+            <!--모바일사이즈 menu-->
             <div class="rwdMenu">
             <span class="rwdMenu-close">
                 <img src="img/commons/header/top-header-rwd-menu-close-h.png" alt="menuClose">
